# di-logging

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: validate-dependencies-licenses.yml  validate-pr-title.yml
di_logging/: __init__.py
docker/: Dev.Dockerfile  docker-compose.yml
tests/: __init__.py  test_logging.py
