[tool.poetry]
name = "di-logging"
version = "0"
description = "Standard logging library for product"
authors = []
license = "MIT"
include = [
    { path = "LICENSE", format = ["sdist", "wheel"] },
    { path = "README.md", format = "sdist" },
    { path = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pyright = "^1.1.349"
pytest-cov = "^4.0.0"
pytest-ruff = "^0.2.1"
ruff = "^0.1.6"
taskipy = "^1.2.0"

[tool.pyright]
include = ["di_logging"]
exclude = [  # Do not process these files
    "**/node_modules",
    "**/__pycache__",
    ".venv/**",
]
defineConstant = { DEBUG = true }
ignore = ["tests"]  # Process these files, but ignore errors
# stubPath = "src/stubs"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.9"
pythonPlatform = "Linux"
executionEnvironments = [{ root = "di_logging" }]

[tool.taskipy.tasks]
# Coverage runs all tests & checks - used in CI
coverage = "pyright . && pytest --ruff --ruff-format -ra -v --cov=. --cov-report=xml:test-coverage.xml --cov-fail-under=75 --maxfail=3 --junitxml=test-results.xml"
debug = "python -m debugpy --listen 0.0.0.0:5678 --wait-for-client /usr/local/bin/pytest"
format = "ruff format -n . && ruff check -n --fix ."
test = "pytest --ruff --ruff-format --cache-clear -ra -v"
typecheck = "pyright ."

[tool.ruff]
select = ["E", "F", "D", "I"]
# Docstring Ignores:
# D100 - Missing docstring in public module
# D103 - Missing docstring in public function
# D104 - Missing docstring in public package
# D107 - Missing docstring in __init__
# D202 - No blank lines allowed after function docstring
# D203 - 1 blank line required before class docstring
# D213 - Multi-line docstring summary should start at the first line
# D400 - First line should end with a period
# D401 - First line should be in imperative mood
# D406 - Section name should end with a newline
# D407 - Missing dashed underline after section
# D413 - Missing blank line after last section
# D415 - First line should end with a period, question mark, or exclamation point
ignore = ["D100", "D103", "D104", "D107", "D202", "D203", "D212", "D400", "D401", "D406", "D407", "D413", "D415"]
line-length = 95

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["di_logging"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
